<resources>
    <string name="app_name">Calculator</string>


    <string name="ac">AC</string>

    <string name="open_parenthesis">(</string>

    <string name="closed_parenthesis">)</string>

    <string name="Division">/</string>

    <string name="nine">9</string>

    <string name="seven">7</string>

    <string name="eight">8</string>

    <string name="multiplied_by">*</string>

    <string name="four">4</string>

    <string name="five">5</string>

    <string name="six">6</string>

    <string name="minus">-</string>

    <string name="three">3</string>

    <string name="two">2</string>

    <string name="one">1</string>

    <string name="plus">+</string>

    <string name="eraser"></string>

    <string name="zero">0</string>

    <string name="dot">.</string>

    <string name="equal">=</string>

    <string name="twelve_thousand_five_hundred_and_thirty_six">12,536</string>

    <string name="Twelve_thousand_five_hundred_and_thirty_six_2">= 12,536</string>
</resources>