<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:gravity="bottom|center_horizontal"
    android:weightSum="9"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <HorizontalScrollView
        android:id="@+id/horizontal_scroll_view_txtExpression"
        android:scrollbars="none"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtExpression"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:singleLine="true"
            android:scrollHorizontally="true"
            android:textAlignment="viewEnd"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="56dp"
            tools:ignore="SpUsage" />
    </HorizontalScrollView>

    <HorizontalScrollView
        android:scrollbars="none"
        android:id="@+id/horizontal_scroll_view_txtAnswer"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:singleLine="true"
            android:textAlignment="viewEnd"
            android:textSize="35dp"
            tools:ignore="SpUsage" />

    </HorizontalScrollView>

    <View
        android:id="@+id/viewMain"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_light"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:layout_weight="5.25"
        android:weightSum="5">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/btnAC"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?selectableItemBackground"
                android:text="@string/ac"
                android:textColor="?attr/colorSecondary"
                android:textSize="@dimen/button_text_size_small"
                tools:ignore="ButtonStyle,TextContrastCheck,VisualLintButtonSize" />

            <Button
                android:id="@+id/btnOpenParenthesis"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?selectableItemBackground"
                android:layoutDirection="rtl"
                android:text="@string/closed_parenthesis"
                android:textColor="?attr/colorSecondary"
                android:textSize="@dimen/button_text_size_big"
                tools:ignore="ButtonStyle,DuplicateSpeakableTextCheck,TextContrastCheck,VisualLintButtonSize" />

            <Button
                android:id="@+id/btnClosedParenthesis"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?selectableItemBackground"
                android:text="@string/closed_parenthesis"
                android:textColor="?attr/colorSecondary"
                android:textSize="@dimen/button_text_size_big"
                tools:ignore="ButtonStyle,TextContrastCheck,VisualLintButtonSize" />

            <Button
                android:id="@+id/btnDivision"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?selectableItemBackground"
                android:text="@string/Division"
                android:textColor="?attr/colorSecondary"
                android:textSize="@dimen/button_text_size_big"
                tools:ignore="ButtonStyle,TextContrastCheck,VisualLintButtonSize" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/btnSeven"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?selectableItemBackground"
                android:text="@string/seven"
                android:textSize="@dimen/button_text_size_big"
                tools:ignore="ButtonStyle,VisualLintButtonSize" />

            <Button
                android:id="@+id/btnEight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?selectableItemBackground"
                android:text="@string/eight"
                android:textSize="@dimen/button_text_size_big"
                tools:ignore="ButtonStyle,VisualLintButtonSize" />

            <Button
                android:id="@+id/btnNine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?selectableItemBackground"
                android:text="@string/nine"
                android:textSize="@dimen/button_text_size_big"
                tools:ignore="ButtonStyle,VisualLintButtonSize" />

            <Button
                android:id="@+id/btnMultipliedBy"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?selectableItemBackground"
                android:text="@string/multiplied_by"
                android:textColor="?attr/colorSecondary"
                android:textSize="@dimen/button_text_size_big"
                tools:ignore="ButtonStyle,TextContrastCheck,VisualLintButtonSize" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/btnFour"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?selectableItemBackground"
                android:text="@string/four"
                android:textSize="@dimen/button_text_size_big"
                tools:ignore="ButtonStyle,VisualLintButtonSize" />

            <Button
                android:id="@+id/btnFive"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?selectableItemBackground"
                android:text="@string/five"
                android:textSize="@dimen/button_text_size_big"
                tools:ignore="ButtonStyle,VisualLintButtonSize" />

            <Button
                android:id="@+id/btnSix"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?selectableItemBackground"
                android:text="@string/six"
                android:textSize="@dimen/button_text_size_big"
                tools:ignore="ButtonStyle,VisualLintButtonSize" />

            <Button
                android:id="@+id/btnMinus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?selectableItemBackground"
                android:text="@string/minus"
                android:textColor="?attr/colorSecondary"
                android:textSize="@dimen/button_text_size_big"
                tools:ignore="ButtonStyle,TextContrastCheck,VisualLintButtonSize" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/btnOne"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?selectableItemBackground"
                android:text="@string/one"
                android:textSize="@dimen/button_text_size_big"
                tools:ignore="ButtonStyle,VisualLintButtonSize" />

            <Button
                android:id="@+id/btnTwo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?selectableItemBackground"
                android:layoutDirection="rtl"
                android:text="@string/two"
                android:textSize="@dimen/button_text_size_big"
                tools:ignore="ButtonStyle,VisualLintButtonSize" />

            <Button
                android:id="@+id/btnThree"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?selectableItemBackground"
                android:text="@string/three"
                android:textSize="@dimen/button_text_size_big"
                tools:ignore="ButtonStyle,VisualLintButtonSize" />

            <Button
                android:id="@+id/btnPlus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?selectableItemBackground"
                android:text="@string/plus"
                android:textColor="?attr/colorSecondary"
                android:textSize="@dimen/button_text_size_big"
                tools:ignore="ButtonStyle,TextContrastCheck,VisualLintButtonSize" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/btnEraser"
                android:text="C"
                android:textColor="?attr/colorSecondary"
                android:textSize="@dimen/button_text_size_small"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/btnZero"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?selectableItemBackground"
                android:text="@string/zero"
                android:textSize="@dimen/button_text_size_big"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/btnDot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?selectableItemBackground"
                android:text="@string/dot"
                android:textSize="@dimen/button_text_size_big"
                tools:ignore="VisualLintButtonSize" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/btnEqual"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/shape_circle"
                    android:gravity="center"
                    android:text="@string/equal"
                    android:textColor="@color/white"
                    android:textSize="@dimen/button_text_size_big"
                    tools:ignore="TextContrastCheck" />
            </FrameLayout>

        </TableRow>
    </TableLayout>
</LinearLayout>